--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="themoviedb">
+    package="com.mobileapplicationdevelopment.themoviedb">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MaterialComponents.NoActionBar"
-        android:fullBackupContent="true">
-        <activity android:name="com.mobileapplicationdevelopment.themoviedb.View.MovieDetailsActivity" />
+        android:theme="@style/Theme.MaterialComponents.NoActionBar">
         <activity
-            android:name="com.mobileapplicationdevelopment.themoviedb.View.NowPlayingActivity"
+            android:name="com.mobileapplicationdevelopment.themoviedb.View.Activities.MovieDetailsActivity"
+            android:exported="true" />
+        <activity
+            android:name="com.mobileapplicationdevelopment.themoviedb.View.Activities.NowPlayingActivity"
+            android:exported="true" />
+        <activity
+            android:name="com.mobileapplicationdevelopment.themoviedb.View.Activities.MainActivity"
+            android:exported="true" />
+        <activity
+            android:name="com.mobileapplicationdevelopment.themoviedb.View.MainMenuActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,11 +31,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.mobileapplicationdevelopment.themoviedb.View.MainActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
     </application>
-
 </manifest>
