--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.2'
-
+        classpath 'com.android.tools.build:gradle:7.0.3'
+        classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
